# mapper-datacapture-split-images

./: .gitignore  CMakeLists.txt  main.cpp
